<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:padding="15dp"
    tools:context=".CreateEditTask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_name" />

        <EditText
            android:id="@+id/edit_text_task_name"
            android:layout_width="match_parent"
            android:layout_height="53dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_date" />

        <EditText
            android:id="@+id/edit_text_date"
            android:layout_width="match_parent"
            android:layout_height="49dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time" />

        <EditText
            android:id="@+id/edit_text_time"
            android:layout_width="362dp"
            android:layout_height="49dp" />

        <TextView
            android:id="@+id/id_label_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_description" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="364dp"
            android:layout_height="177dp" />
    </LinearLayout>

    <Button
        android:id="@+id/id_add_location"
        android:layout_width="287dp"
        android:layout_height="63dp"
        android:layout_marginTop="15dp"
        android:onClick="addLocation"
        android:text="@string/action_add_locatoin" />

    <Button
        android:id="@+id/id_button_save"
        android:layout_width="287dp"
        android:layout_height="63dp"
        android:layout_marginTop="15dp"
        android:onClick="saveTask"
        android:text="@string/text_save" />

</LinearLayout>